--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             <li>📞 Phone: +91 98348 47405</li>
             <li>📧 Email: ronalproperties58@gmail.com</li>
         </ul>
+      <div style="text-align: center;font-weight: 300;">
+          <p>
+          ©Copyright 2025 | All Rights Reserved
+          </p>
+        </div>
     </div>
   </body>
 </html>
