--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
       <div style="text-align: center;font-weight: 300;">
           <p>
-          ©Copyright 2025 | All Rights Reserved
+          ©Copyright 2025 Ronal Properties | All Rights Reserved 
           </p>
         </div>
     </div>
